update CORS configuration and enhance security settings, make necessary changes for production